# projeto-api-fiap

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
.github/worflows/: ci.yml
.github/workflows/: ci.yml
app/: app.py
app/fallback/: fallback_creation.py  fallback_handler.py
app/mapper/: url_mapper.py
app/routes/: routes.py
app/schemas/: embrapa_schema.py  invocation_parameters_schema.py  responses_schema.py
app/scrapper/: scrapping.py
app/tests/: test_app.py  test_fallback.py  test_invocation_parameters.py  test_responses.py  test_scrapping.py  test_url_mapper.py
tests/: test_app.py  test_scrapping.py
