[project]
name = "projeto-api-fiap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]==0.115.1",
    "beautifulsoup4>=4.13.4",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
    "pandas==2.2.3",
]

[tool.poetry]
version = "1.0" 

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "coverage",
    "taskipy",
]

[tool.ruff]
line-length = 79
preview = true
lint.select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev app/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=app -vv'
post_test = 'coverage html'
install = 'poetry install'